--- a/apirp/package.json
+++ b/apirp/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
+    "shebang-regex": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
